# mobileiron-api

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mobileiron_api/: __init__.py  client.py
mobileiron_api/api/: base_api.py  constants.py  device_management_api.py  user_management_api.py
mobileiron_api/api/helpers/: filters.py  helpers.py
testing/: fixtures.py
tests/: conftest.py  test_apis.py
