[tool.poetry]
name = "mobileiron-api"
version = "0.1.0"
description = ""
authors = ["n1ls <lawiet47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
