[tool.poetry]
name = "mobileiron-api"
version = "0.1.0"
description = ""
authors = ["n1ls <lawiet47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
